--- a/api/core/tools/provider/builtin/stablediffusion/stablediffusion.yaml
+++ b/api/core/tools/provider/builtin/stablediffusion/stablediffusion.yaml
@@ -37,4 +37,4 @@ credentials_for_provider:
       en_US: The model name of the StableDiffusion server
       zh_Hans: StableDiffusion服务器的模型名称
       pt_BR: The model name of the StableDiffusion server
-    url: https://docs.dify.ai/tutorials/tool-configuration/stable-diffusion
+    url: https://docs.XXX.ai/tutorials/tool-configuration/stable-diffusion
